--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>{% block title %}{% endblock %}</title>
-  <style>.error-message {color: red;}</style>
+  <link href="{{ url_for('static', path='/main.css') }}" rel="stylesheet">
 </head>
 
 <body>
